// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ActionsPure Finished 1`] = `
<div
  style="margin: 1em; padding: 1rem; border-radius: 1rem; background-color: rgb(48, 48, 48);"
>
  <div
    class="actions-pure__wrapper"
  >
    <button
      class="vs-button vs-button--null vs-button--size-null vs-button--default"
    >
      <div
        class="vs-button__content"
      >
        <svg
          class="icon small"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.75 4.5a.75.75 0 01.75.75V11h5.75a.75.75 0 010 1.5H12.5v5.75a.75.75 0 01-1.5 0V12.5H5.25a.75.75 0 010-1.5H11V5.25a.75.75 0 01.75-.75z"
            fill="white"
            fill-rule="evenodd"
          />
        </svg>
         
        <p
          class="small"
        >
          
      New Game
    
        </p>
      </div>
    </button>
     
    <button
      class="vs-button vs-button--null vs-button--size-null vs-button--default"
    >
      <div
        class="vs-button__content"
      >
        <svg
          class="icon small"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.75 4.5a.75.75 0 01.75.75V11h5.75a.75.75 0 010 1.5H12.5v5.75a.75.75 0 01-1.5 0V12.5H5.25a.75.75 0 010-1.5H11V5.25a.75.75 0 01.75-.75z"
            fill="white"
            fill-rule="evenodd"
          />
        </svg>
         
        <p
          class="small"
        >
          Next Leg
    
        </p>
      </div>
    </button>
     
    <button
      class="vs-button vs-button--null vs-button--size-null vs-button--default"
    >
      <div
        class="vs-button__content"
      >
        <svg
          class="icon small"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.263 2.177a1.75 1.75 0 012.474 0l2.586 2.586a1.75 1.75 0 010 2.474L19.53 10.03l-.012.013L8.69 20.378a1.75 1.75 0 01-.699.409l-5.523 1.68a.75.75 0 01-.935-.935l1.673-5.5a1.75 1.75 0 01.466-.756L14.476 4.963l2.787-2.786zm-2.275 4.371l-10.28 9.813a.25.25 0 00-.067.108l-1.264 4.154 4.177-1.271a.25.25 0 00.1-.059l10.273-9.806-2.94-2.939zM19 8.44l2.263-2.262a.25.25 0 000-.354l-2.586-2.586a.25.25 0 00-.354 0L16.061 5.5 19 8.44z"
            fill="white"
            fill-rule="evenodd"
          />
        </svg>
         
        <p
          class="small"
        >
          Statistics
        </p>
      </div>
    </button>
     
    <button
      class="vs-button vs-button--null vs-button--size-null vs-button--default"
    >
      <div
        class="vs-button__content"
      >
        <svg
          class="icon small"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.03 5.72a.75.75 0 010 1.06l-11.5 11.5a.75.75 0 01-1.072-.012l-5.5-5.75a.75.75 0 111.084-1.036l4.97 5.195L19.97 5.72a.75.75 0 011.06 0z"
            fill="white"
            fill-rule="evenodd"
          />
        </svg>
         
        <p
          class="small"
        >
          
      Exit
    
        </p>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots ActionsPure In Game 1`] = `
<div
  style="margin: 1em; padding: 1rem; border-radius: 1rem; background-color: rgb(48, 48, 48);"
>
  <div
    class="actions-pure__wrapper"
  >
    <button
      class="vs-button vs-button--null vs-button--size-null vs-button--default"
    >
      <div
        class="vs-button__content"
      >
        <svg
          class="icon small"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.03 5.72a.75.75 0 010 1.06l-11.5 11.5a.75.75 0 01-1.072-.012l-5.5-5.75a.75.75 0 111.084-1.036l4.97 5.195L19.97 5.72a.75.75 0 011.06 0z"
            fill="white"
            fill-rule="evenodd"
          />
        </svg>
         
        <p
          class="small"
        >
          Finish Current Turn
        </p>
      </div>
    </button>
     
    <button
      class="vs-button vs-button--null vs-button--size-null vs-button--default"
    >
      <div
        class="vs-button__content"
      >
        <svg
          class="icon small"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.263 2.177a1.75 1.75 0 012.474 0l2.586 2.586a1.75 1.75 0 010 2.474L19.53 10.03l-.012.013L8.69 20.378a1.75 1.75 0 01-.699.409l-5.523 1.68a.75.75 0 01-.935-.935l1.673-5.5a1.75 1.75 0 01.466-.756L14.476 4.963l2.787-2.786zm-2.275 4.371l-10.28 9.813a.25.25 0 00-.067.108l-1.264 4.154 4.177-1.271a.25.25 0 00.1-.059l10.273-9.806-2.94-2.939zM19 8.44l2.263-2.262a.25.25 0 000-.354l-2.586-2.586a.25.25 0 00-.354 0L16.061 5.5 19 8.44z"
            fill="white"
            fill-rule="evenodd"
          />
        </svg>
         
        <p
          class="small"
        >
          Correct Score
    
        </p>
      </div>
    </button>
     
    <button
      class="vs-button vs-button--null vs-button--size-null vs-button--default"
    >
      <div
        class="vs-button__content"
      >
        <svg
          class="icon small"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.998 2.5A9.503 9.503 0 003.378 8H5.75a.75.75 0 010 1.5H2a1 1 0 01-1-1V4.75a.75.75 0 011.5 0v1.697A10.997 10.997 0 0111.998 1C18.074 1 23 5.925 23 12s-4.926 11-11.002 11C6.014 23 1.146 18.223 1 12.275a.75.75 0 011.5-.037 9.5 9.5 0 009.498 9.262c5.248 0 9.502-4.253 9.502-9.5s-4.254-9.5-9.502-9.5z"
            fill="white"
          />
          <path
            d="M12.5 7.25a.75.75 0 00-1.5 0v5.5c0 .27.144.518.378.651l3.5 2a.75.75 0 00.744-1.302L12.5 12.315V7.25z"
          />
        </svg>
         
        <p
          class="small"
        >
          
      Revert last Dart
    
        </p>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots CurrentPlayer Default 1`] = `
<div
  style="height: 19rem; margin: 1em; padding: 2rem; border-radius: 1rem; background-color: rgb(48, 48, 48);"
>
  <div
    class="current__player__container"
  >
    <h1
      class="colored"
    >
      Bob
    </h1>
     
    <h2>
      <span>
        140
      </span>
      
    Points remaining
  
    </h2>
     
    <div
      class="container"
    >
      <div
        class="dart active"
      >
        <svg
          class="dartSvg"
          height="1003.000000pt"
          preserveAspectRatio="xMidYMid meet"
          version="1.0"
          viewBox="0 0 1061.000000 273.000000"
          width="1061.000000pt"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="#ffffff"
            stroke="none"
            transform="translate(0.000000,643.000000) scale(0.100000,-0.100000) rotate(20)"
          >
            <path
              d="M11453 6419 c-28 -5 -75 -18 -104 -29 -60 -24 -1269 -626 -1282 -639
-6 -6 -441 -1075 -595 -1463 -26 -66 -54 -90 -76 -68 -16 16 -45 11 -58 -10
-9 -13 -19 -18 -34 -14 -14 4 -29 -1 -41 -13 -10 -10 -26 -17 -36 -15 -30 6
-49 -18 -43 -53 6 -31 5 -32 -56 -57 -35 -14 -448 -184 -918 -378 -1100 -453
-1276 -524 -1498 -604 -175 -63 -626 -206 -650 -206 -7 0 -12 6 -12 13 0 8 -9
22 -21 33 -24 21 -52 10 -57 -24 -2 -15 -21 -27 -70 -45 -37 -14 -220 -85
-407 -157 -300 -116 -1168 -443 -1500 -565 -851 -312 -745 -265 -1385 -617
-316 -174 -353 -198 -661 -419 -310 -224 -331 -237 -460 -291 -74 -31 -363
-152 -644 -268 -775 -322 -725 -299 -738 -327 -16 -35 17 -97 53 -101 16 -2
311 116 770 308 l745 311 380 70 c209 38 396 71 415 74 36 5 700 198 892 260
134 43 223 79 363 145 61 29 225 105 365 170 140 65 300 139 355 165 144 68
774 356 950 435 732 327 763 340 794 334 41 -9 64 10 56 46 -6 27 -1 30 192
130 272 142 414 212 578 285 194 87 2247 951 2285 962 9 2 19 -6 25 -19 12
-28 47 -35 68 -14 9 9 27 16 41 16 14 0 31 8 38 18 7 9 24 17 38 17 16 0 29 8
36 23 11 23 64 62 83 62 8 0 442 -181 1106 -462 110 -47 236 -99 280 -117 l80
-33 655 221 c360 122 687 237 725 256 78 38 187 130 212 179 9 17 25 74 37
126 23 106 24 150 6 580 -5 140 -13 345 -17 455 l-6 200 44 16 c53 19 58 37
29 101 -24 55 -38 62 -85 42 -34 -14 -36 -14 -63 15 -15 16 -190 204 -389 418
-325 349 -371 395 -455 450 -51 34 -106 67 -121 72 -33 13 -139 13 -214 0z"
            />
          </g>
        </svg>
         
        <p
          class="score"
        >
          19
        </p>
      </div>
      <div
        class="dart active"
      >
        <svg
          class="dartSvg"
          height="1003.000000pt"
          preserveAspectRatio="xMidYMid meet"
          version="1.0"
          viewBox="0 0 1061.000000 273.000000"
          width="1061.000000pt"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="#ffffff"
            stroke="none"
            transform="translate(0.000000,643.000000) scale(0.100000,-0.100000) rotate(20)"
          >
            <path
              d="M11453 6419 c-28 -5 -75 -18 -104 -29 -60 -24 -1269 -626 -1282 -639
-6 -6 -441 -1075 -595 -1463 -26 -66 -54 -90 -76 -68 -16 16 -45 11 -58 -10
-9 -13 -19 -18 -34 -14 -14 4 -29 -1 -41 -13 -10 -10 -26 -17 -36 -15 -30 6
-49 -18 -43 -53 6 -31 5 -32 -56 -57 -35 -14 -448 -184 -918 -378 -1100 -453
-1276 -524 -1498 -604 -175 -63 -626 -206 -650 -206 -7 0 -12 6 -12 13 0 8 -9
22 -21 33 -24 21 -52 10 -57 -24 -2 -15 -21 -27 -70 -45 -37 -14 -220 -85
-407 -157 -300 -116 -1168 -443 -1500 -565 -851 -312 -745 -265 -1385 -617
-316 -174 -353 -198 -661 -419 -310 -224 -331 -237 -460 -291 -74 -31 -363
-152 -644 -268 -775 -322 -725 -299 -738 -327 -16 -35 17 -97 53 -101 16 -2
311 116 770 308 l745 311 380 70 c209 38 396 71 415 74 36 5 700 198 892 260
134 43 223 79 363 145 61 29 225 105 365 170 140 65 300 139 355 165 144 68
774 356 950 435 732 327 763 340 794 334 41 -9 64 10 56 46 -6 27 -1 30 192
130 272 142 414 212 578 285 194 87 2247 951 2285 962 9 2 19 -6 25 -19 12
-28 47 -35 68 -14 9 9 27 16 41 16 14 0 31 8 38 18 7 9 24 17 38 17 16 0 29 8
36 23 11 23 64 62 83 62 8 0 442 -181 1106 -462 110 -47 236 -99 280 -117 l80
-33 655 221 c360 122 687 237 725 256 78 38 187 130 212 179 9 17 25 74 37
126 23 106 24 150 6 580 -5 140 -13 345 -17 455 l-6 200 44 16 c53 19 58 37
29 101 -24 55 -38 62 -85 42 -34 -14 -36 -14 -63 15 -15 16 -190 204 -389 418
-325 349 -371 395 -455 450 -51 34 -106 67 -121 72 -33 13 -139 13 -214 0z"
            />
          </g>
        </svg>
         
        <p
          class="score"
        >
          29
        </p>
      </div>
      <div
        class="dart active"
      >
        <svg
          class="dartSvg"
          height="1003.000000pt"
          preserveAspectRatio="xMidYMid meet"
          version="1.0"
          viewBox="0 0 1061.000000 273.000000"
          width="1061.000000pt"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="#ffffff"
            stroke="none"
            transform="translate(0.000000,643.000000) scale(0.100000,-0.100000) rotate(20)"
          >
            <path
              d="M11453 6419 c-28 -5 -75 -18 -104 -29 -60 -24 -1269 -626 -1282 -639
-6 -6 -441 -1075 -595 -1463 -26 -66 -54 -90 -76 -68 -16 16 -45 11 -58 -10
-9 -13 -19 -18 -34 -14 -14 4 -29 -1 -41 -13 -10 -10 -26 -17 -36 -15 -30 6
-49 -18 -43 -53 6 -31 5 -32 -56 -57 -35 -14 -448 -184 -918 -378 -1100 -453
-1276 -524 -1498 -604 -175 -63 -626 -206 -650 -206 -7 0 -12 6 -12 13 0 8 -9
22 -21 33 -24 21 -52 10 -57 -24 -2 -15 -21 -27 -70 -45 -37 -14 -220 -85
-407 -157 -300 -116 -1168 -443 -1500 -565 -851 -312 -745 -265 -1385 -617
-316 -174 -353 -198 -661 -419 -310 -224 -331 -237 -460 -291 -74 -31 -363
-152 -644 -268 -775 -322 -725 -299 -738 -327 -16 -35 17 -97 53 -101 16 -2
311 116 770 308 l745 311 380 70 c209 38 396 71 415 74 36 5 700 198 892 260
134 43 223 79 363 145 61 29 225 105 365 170 140 65 300 139 355 165 144 68
774 356 950 435 732 327 763 340 794 334 41 -9 64 10 56 46 -6 27 -1 30 192
130 272 142 414 212 578 285 194 87 2247 951 2285 962 9 2 19 -6 25 -19 12
-28 47 -35 68 -14 9 9 27 16 41 16 14 0 31 8 38 18 7 9 24 17 38 17 16 0 29 8
36 23 11 23 64 62 83 62 8 0 442 -181 1106 -462 110 -47 236 -99 280 -117 l80
-33 655 221 c360 122 687 237 725 256 78 38 187 130 212 179 9 17 25 74 37
126 23 106 24 150 6 580 -5 140 -13 345 -17 455 l-6 200 44 16 c53 19 58 37
29 101 -24 55 -38 62 -85 42 -34 -14 -36 -14 -63 15 -15 16 -190 204 -389 418
-325 349 -371 395 -455 450 -51 34 -106 67 -121 72 -33 13 -139 13 -214 0z"
            />
          </g>
        </svg>
         
        <p
          class="score"
        >
          120
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots PlayerMenu Default 1`] = `
<div
  style="margin: 3em; padding: 2rem; border-radius: 1rem; background-color: rgb(48, 48, 48);"
>
  <div
    oninput="function actionHandler() {
    var channel = _addons.addons.getChannel();

    var id = (0, _v.default)();
    var minDepth = 5; // anything less is really just storybook internals

    for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
      args[_key] = arguments[_key];
    }

    var normalizedArgs = args.length > 1 ? args : args[0];
    var actionDisplayToEmit = {
      id: id,
      count: 0,
      data: {
        name: name,
        args: normalizedArgs
      },
      options: Object.assign({}, actionOptions, {
        depth: minDepth + (actionOptions.depth || 3),
        allowFunction: actionOptions.allowFunction || false
      })
    };
    channel.emit(_constants.EVENT_ID, actionDisplayToEmit);
  }"
  >
    <h2
      class="mb text-center"
    >
      Players
    </h2>
     
    <div
      class="player_list"
    >
      <div
        class="row__container player_row"
        data-test="player-menu__row"
      >
        <div>
          <div
            class="vs-avatar-content vs-avatar-content--size vs-component--is-color vs-change-color-badge"
            style="width: 30px; height: 30px; cursor: false;"
          >
            <div
              class="vs-avatar"
            >
              <img
                alt="player image"
                src="~/assets/images/player.png"
              />
            </div>
          </div>
           
          <div
            class="name"
          >
            <div
              class="vs-input-parent input vs-input-parent--state-null vs-input-parent--border vs-component--success vs-component--is-color"
              placeholder="Name"
            >
              <div
                class="vs-input-content vs-input-content--has-color"
              >
                <input
                  class="vs-input"
                  id="vs-input--54"
                  placeholder=""
                />
                <label
                  class="vs-input__label"
                  for="vs-input--54"
                >
                  Name
                </label>
                <div
                  class="vs-input__affects"
                >
                  <div
                    class="vs-input__affects__1"
                  />
                  <div
                    class="vs-input__affects__2"
                  />
                  <div
                    class="vs-input__affects__3"
                  />
                  <div
                    class="vs-input__affects__4"
                  />
                </div>
              </div>
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
         
        <div>
          <!---->
           
          <svg
            class="delete_button"
            fill="none"
            height="17"
            viewBox="0 0 16 17"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M3.72007 4.22C3.86069 4.07955 4.05132 4.00066 4.25007 4.00066C4.44882 4.00066 4.63944 4.07955 4.78007 4.22L8.00007 7.44L11.2201 4.22C11.2888 4.14631 11.3716 4.08721 11.4636 4.04622C11.5556 4.00523 11.6549 3.98319 11.7556 3.98141C11.8563 3.97963 11.9563 3.99816 12.0497 4.03588C12.1431 4.0736 12.2279 4.12974 12.2991 4.20096C12.3704 4.27218 12.4265 4.35702 12.4642 4.4504C12.5019 4.54379 12.5205 4.64382 12.5187 4.74452C12.5169 4.84523 12.4949 4.94454 12.4539 5.03654C12.4129 5.12854 12.3538 5.21134 12.2801 5.28L9.06007 8.5L12.2801 11.72C12.3538 11.7887 12.4129 11.8715 12.4539 11.9635C12.4949 12.0555 12.5169 12.1548 12.5187 12.2555C12.5205 12.3562 12.5019 12.4562 12.4642 12.5496C12.4265 12.643 12.3704 12.7278 12.2991 12.799C12.2279 12.8703 12.1431 12.9264 12.0497 12.9641C11.9563 13.0018 11.8563 13.0204 11.7556 13.0186C11.6549 13.0168 11.5556 12.9948 11.4636 12.9538C11.3716 12.9128 11.2888 12.8537 11.2201 12.78L8.00007 9.56L4.78007 12.78C4.63789 12.9125 4.44984 12.9846 4.25554 12.9812C4.06124 12.9777 3.87586 12.899 3.73844 12.7616C3.60103 12.6242 3.52232 12.4388 3.51889 12.2445C3.51546 12.0502 3.58759 11.8622 3.72007 11.72L6.94007 8.5L3.72007 5.28C3.57962 5.13938 3.50073 4.94875 3.50073 4.75C3.50073 4.55125 3.57962 4.36063 3.72007 4.22Z"
              fill="#EE5622"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
     
    <div
      class="addPlayer"
    >
      <button
        class="vs-button vs-button--null vs-button--size-null vs-button--default"
        data-test="player-menu__add-row"
      >
        <div
          class="vs-button__content"
        >
          <svg
            class="icon"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.75 4.5a.75.75 0 01.75.75V11h5.75a.75.75 0 010 1.5H12.5v5.75a.75.75 0 01-1.5 0V12.5H5.25a.75.75 0 010-1.5H11V5.25a.75.75 0 01.75-.75z"
              fill="white"
              fill-rule="evenodd"
            />
          </svg>
           
          <p
            class=""
          >
            
      Add Player
    
          </p>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots PlayerRow Default 1`] = `
<div
  class="row__container"
  ondelete="function actionHandler() {
    var channel = _addons.addons.getChannel();

    var id = (0, _v.default)();
    var minDepth = 5; // anything less is really just storybook internals

    for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
      args[_key] = arguments[_key];
    }

    var normalizedArgs = args.length > 1 ? args : args[0];
    var actionDisplayToEmit = {
      id: id,
      count: 0,
      data: {
        name: name,
        args: normalizedArgs
      },
      options: Object.assign({}, actionOptions, {
        depth: minDepth + (actionOptions.depth || 3),
        allowFunction: actionOptions.allowFunction || false
      })
    };
    channel.emit(_constants.EVENT_ID, actionDisplayToEmit);
  }"
  oninput="function actionHandler() {
    var channel = _addons.addons.getChannel();

    var id = (0, _v.default)();
    var minDepth = 5; // anything less is really just storybook internals

    for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
      args[_key] = arguments[_key];
    }

    var normalizedArgs = args.length > 1 ? args : args[0];
    var actionDisplayToEmit = {
      id: id,
      count: 0,
      data: {
        name: name,
        args: normalizedArgs
      },
      options: Object.assign({}, actionOptions, {
        depth: minDepth + (actionOptions.depth || 3),
        allowFunction: actionOptions.allowFunction || false
      })
    };
    channel.emit(_constants.EVENT_ID, actionDisplayToEmit);
  }"
>
  <div>
    <div
      class="vs-avatar-content vs-avatar-content--size vs-component--is-color vs-change-color-badge"
      style="width: 30px; height: 30px; cursor: false;"
    >
      <div
        class="vs-avatar"
      >
        <img
          alt="player image"
          src="~/assets/images/player.png"
        />
      </div>
    </div>
     
    <div
      class="name"
    >
      <p
        class="label"
      >
        
        Test
      
      </p>
    </div>
  </div>
   
  <div>
    <p
      class="gamesPlayed"
    >
      312 games
    </p>
     
    <svg
      class="delete_button"
      fill="none"
      height="17"
      viewBox="0 0 16 17"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M3.72007 4.22C3.86069 4.07955 4.05132 4.00066 4.25007 4.00066C4.44882 4.00066 4.63944 4.07955 4.78007 4.22L8.00007 7.44L11.2201 4.22C11.2888 4.14631 11.3716 4.08721 11.4636 4.04622C11.5556 4.00523 11.6549 3.98319 11.7556 3.98141C11.8563 3.97963 11.9563 3.99816 12.0497 4.03588C12.1431 4.0736 12.2279 4.12974 12.2991 4.20096C12.3704 4.27218 12.4265 4.35702 12.4642 4.4504C12.5019 4.54379 12.5205 4.64382 12.5187 4.74452C12.5169 4.84523 12.4949 4.94454 12.4539 5.03654C12.4129 5.12854 12.3538 5.21134 12.2801 5.28L9.06007 8.5L12.2801 11.72C12.3538 11.7887 12.4129 11.8715 12.4539 11.9635C12.4949 12.0555 12.5169 12.1548 12.5187 12.2555C12.5205 12.3562 12.5019 12.4562 12.4642 12.5496C12.4265 12.643 12.3704 12.7278 12.2991 12.799C12.2279 12.8703 12.1431 12.9264 12.0497 12.9641C11.9563 13.0018 11.8563 13.0204 11.7556 13.0186C11.6549 13.0168 11.5556 12.9948 11.4636 12.9538C11.3716 12.9128 11.2888 12.8537 11.2201 12.78L8.00007 9.56L4.78007 12.78C4.63789 12.9125 4.44984 12.9846 4.25554 12.9812C4.06124 12.9777 3.87586 12.899 3.73844 12.7616C3.60103 12.6242 3.52232 12.4388 3.51889 12.2445C3.51546 12.0502 3.58759 11.8622 3.72007 11.72L6.94007 8.5L3.72007 5.28C3.57962 5.13938 3.50073 4.94875 3.50073 4.75C3.50073 4.55125 3.57962 4.36063 3.72007 4.22Z"
        fill="#EE5622"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots PureCorrectScore Default 1`] = `
<div
  class="correct_score_modal small"
>
  <h2
    class="colored mb text-center"
  >
    Correct Score
  </h2>
   
  <div
    class="row"
  >
    <div>
      <p>
        For Player:
      </p>
       
      <div
        class="vs-select-content select"
      >
        <div
          class="vs-select vs-select--state-null"
        >
          <input
            class="vs-select__input simple"
            id="21"
            readonly="readonly"
          >
             
            <button
              class="vs-select__option isHover"
            >
              
          Bob
        
            </button>
            <button
              class="vs-select__option activeOption isHover"
            >
              
          Alice
        
            </button>
          </input>
          <label
            class="vs-select__label vs-select__label--hidden"
            for="21"
          />
          <label
            class="vs-select__label vs-select__label--hidden"
            for="21"
          />
          <!---->
          <i
            class="vs-icon-arrow"
          />
        </div>
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
     
    <div>
      <p>
        Last Score:
      </p>
       
      <div
        class="vs-input-parent input vs-input-parent--state-null vs-input-parent--border vs-component--success vs-component--is-color"
      >
        <div
          class="vs-input-content vs-input-content--has-color"
        >
          <input
            class="vs-input"
            id="vs-input--30"
            placeholder=""
          />
          <label
            class="vs-input__label vs-input__label--hidden"
            for="vs-input--30"
          />
          <div
            class="vs-input__affects"
          >
            <div
              class="vs-input__affects__1"
            />
            <div
              class="vs-input__affects__2"
            />
            <div
              class="vs-input__affects__3"
            />
            <div
              class="vs-input__affects__4"
            />
          </div>
        </div>
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="hr"
  />
   
  <h4
    class="mb"
  >
    Score Preview
  </h4>
   
  <table>
    <thead>
      <tr>
        <th
          class="colored"
        >
          
        Round
      
        </th>
        <th
          class="colored"
        >
          
        Bob
      
        </th>
        <th
          class="colored"
        >
          
        Alice
      
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td>
          <svg
            fill="none"
            height="19"
            viewBox="0 0 10 19"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="5"
              cy="16"
              fill="white"
              r="2"
              transform="rotate(-90 5 16)"
            />
             
            <circle
              cx="5"
              cy="9.5"
              fill="white"
              r="2"
              transform="rotate(-90 5 9.5)"
            />
             
            <circle
              cx="5"
              cy="3"
              fill="white"
              r="2"
              transform="rotate(-90 5 3)"
            />
          </svg>
        </td>
        <td>
          <svg
            fill="none"
            height="19"
            viewBox="0 0 10 19"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="5"
              cy="16"
              fill="white"
              r="2"
              transform="rotate(-90 5 16)"
            />
             
            <circle
              cx="5"
              cy="9.5"
              fill="white"
              r="2"
              transform="rotate(-90 5 9.5)"
            />
             
            <circle
              cx="5"
              cy="3"
              fill="white"
              r="2"
              transform="rotate(-90 5 3)"
            />
          </svg>
        </td>
        <td>
          <svg
            fill="none"
            height="19"
            viewBox="0 0 10 19"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="5"
              cy="16"
              fill="white"
              r="2"
              transform="rotate(-90 5 16)"
            />
             
            <circle
              cx="5"
              cy="9.5"
              fill="white"
              r="2"
              transform="rotate(-90 5 9.5)"
            />
             
            <circle
              cx="5"
              cy="3"
              fill="white"
              r="2"
              transform="rotate(-90 5 3)"
            />
          </svg>
        </td>
      </tr>
      <tr>
        <td>
          
          1
        
        </td>
        <td>
          
          360
        
        </td>
        <td>
          
          360
        
        </td>
      </tr>
      <tr>
        <td>
          
          2
        
        </td>
        <td>
          
          219
        
        </td>
        <td>
          
          219
        
        </td>
      </tr>
    </tbody>
  </table>
   
  <div
    class="action_button"
  >
    <button
      class="vs-button vs-button--null vs-button--size-null vs-button--default"
    >
      <div
        class="vs-button__content"
      >
        <!---->
         
        <p
          class=""
        >
          
      Cancel
    
        </p>
      </div>
    </button>
     
    <button
      class="vs-button vs-button--null vs-button--size-null vs-button--default"
    >
      <div
        class="vs-button__content"
      >
        <!---->
         
        <p
          class=""
        >
           Apply 
        </p>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots ScorePerDartDisplay Default 1`] = `
<div
  style="margin: 1em; padding: 2rem; border-radius: 1rem; background-color: rgb(48, 48, 48);"
>
  <div
    class="container"
  >
    <div
      class="dart active"
    >
      <svg
        class="dartSvg"
        height="1003.000000pt"
        preserveAspectRatio="xMidYMid meet"
        version="1.0"
        viewBox="0 0 1061.000000 273.000000"
        width="1061.000000pt"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="#ffffff"
          stroke="none"
          transform="translate(0.000000,643.000000) scale(0.100000,-0.100000) rotate(20)"
        >
          <path
            d="M11453 6419 c-28 -5 -75 -18 -104 -29 -60 -24 -1269 -626 -1282 -639
-6 -6 -441 -1075 -595 -1463 -26 -66 -54 -90 -76 -68 -16 16 -45 11 -58 -10
-9 -13 -19 -18 -34 -14 -14 4 -29 -1 -41 -13 -10 -10 -26 -17 -36 -15 -30 6
-49 -18 -43 -53 6 -31 5 -32 -56 -57 -35 -14 -448 -184 -918 -378 -1100 -453
-1276 -524 -1498 -604 -175 -63 -626 -206 -650 -206 -7 0 -12 6 -12 13 0 8 -9
22 -21 33 -24 21 -52 10 -57 -24 -2 -15 -21 -27 -70 -45 -37 -14 -220 -85
-407 -157 -300 -116 -1168 -443 -1500 -565 -851 -312 -745 -265 -1385 -617
-316 -174 -353 -198 -661 -419 -310 -224 -331 -237 -460 -291 -74 -31 -363
-152 -644 -268 -775 -322 -725 -299 -738 -327 -16 -35 17 -97 53 -101 16 -2
311 116 770 308 l745 311 380 70 c209 38 396 71 415 74 36 5 700 198 892 260
134 43 223 79 363 145 61 29 225 105 365 170 140 65 300 139 355 165 144 68
774 356 950 435 732 327 763 340 794 334 41 -9 64 10 56 46 -6 27 -1 30 192
130 272 142 414 212 578 285 194 87 2247 951 2285 962 9 2 19 -6 25 -19 12
-28 47 -35 68 -14 9 9 27 16 41 16 14 0 31 8 38 18 7 9 24 17 38 17 16 0 29 8
36 23 11 23 64 62 83 62 8 0 442 -181 1106 -462 110 -47 236 -99 280 -117 l80
-33 655 221 c360 122 687 237 725 256 78 38 187 130 212 179 9 17 25 74 37
126 23 106 24 150 6 580 -5 140 -13 345 -17 455 l-6 200 44 16 c53 19 58 37
29 101 -24 55 -38 62 -85 42 -34 -14 -36 -14 -63 15 -15 16 -190 204 -389 418
-325 349 -371 395 -455 450 -51 34 -106 67 -121 72 -33 13 -139 13 -214 0z"
          />
        </g>
      </svg>
       
      <p
        class="score"
      >
        19
      </p>
    </div>
    <div
      class="dart active"
    >
      <svg
        class="dartSvg"
        height="1003.000000pt"
        preserveAspectRatio="xMidYMid meet"
        version="1.0"
        viewBox="0 0 1061.000000 273.000000"
        width="1061.000000pt"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="#ffffff"
          stroke="none"
          transform="translate(0.000000,643.000000) scale(0.100000,-0.100000) rotate(20)"
        >
          <path
            d="M11453 6419 c-28 -5 -75 -18 -104 -29 -60 -24 -1269 -626 -1282 -639
-6 -6 -441 -1075 -595 -1463 -26 -66 -54 -90 -76 -68 -16 16 -45 11 -58 -10
-9 -13 -19 -18 -34 -14 -14 4 -29 -1 -41 -13 -10 -10 -26 -17 -36 -15 -30 6
-49 -18 -43 -53 6 -31 5 -32 -56 -57 -35 -14 -448 -184 -918 -378 -1100 -453
-1276 -524 -1498 -604 -175 -63 -626 -206 -650 -206 -7 0 -12 6 -12 13 0 8 -9
22 -21 33 -24 21 -52 10 -57 -24 -2 -15 -21 -27 -70 -45 -37 -14 -220 -85
-407 -157 -300 -116 -1168 -443 -1500 -565 -851 -312 -745 -265 -1385 -617
-316 -174 -353 -198 -661 -419 -310 -224 -331 -237 -460 -291 -74 -31 -363
-152 -644 -268 -775 -322 -725 -299 -738 -327 -16 -35 17 -97 53 -101 16 -2
311 116 770 308 l745 311 380 70 c209 38 396 71 415 74 36 5 700 198 892 260
134 43 223 79 363 145 61 29 225 105 365 170 140 65 300 139 355 165 144 68
774 356 950 435 732 327 763 340 794 334 41 -9 64 10 56 46 -6 27 -1 30 192
130 272 142 414 212 578 285 194 87 2247 951 2285 962 9 2 19 -6 25 -19 12
-28 47 -35 68 -14 9 9 27 16 41 16 14 0 31 8 38 18 7 9 24 17 38 17 16 0 29 8
36 23 11 23 64 62 83 62 8 0 442 -181 1106 -462 110 -47 236 -99 280 -117 l80
-33 655 221 c360 122 687 237 725 256 78 38 187 130 212 179 9 17 25 74 37
126 23 106 24 150 6 580 -5 140 -13 345 -17 455 l-6 200 44 16 c53 19 58 37
29 101 -24 55 -38 62 -85 42 -34 -14 -36 -14 -63 15 -15 16 -190 204 -389 418
-325 349 -371 395 -455 450 -51 34 -106 67 -121 72 -33 13 -139 13 -214 0z"
          />
        </g>
      </svg>
       
      <p
        class="score"
      >
        29
      </p>
    </div>
    <div
      class="dart active"
    >
      <svg
        class="dartSvg"
        height="1003.000000pt"
        preserveAspectRatio="xMidYMid meet"
        version="1.0"
        viewBox="0 0 1061.000000 273.000000"
        width="1061.000000pt"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="#ffffff"
          stroke="none"
          transform="translate(0.000000,643.000000) scale(0.100000,-0.100000) rotate(20)"
        >
          <path
            d="M11453 6419 c-28 -5 -75 -18 -104 -29 -60 -24 -1269 -626 -1282 -639
-6 -6 -441 -1075 -595 -1463 -26 -66 -54 -90 -76 -68 -16 16 -45 11 -58 -10
-9 -13 -19 -18 -34 -14 -14 4 -29 -1 -41 -13 -10 -10 -26 -17 -36 -15 -30 6
-49 -18 -43 -53 6 -31 5 -32 -56 -57 -35 -14 -448 -184 -918 -378 -1100 -453
-1276 -524 -1498 -604 -175 -63 -626 -206 -650 -206 -7 0 -12 6 -12 13 0 8 -9
22 -21 33 -24 21 -52 10 -57 -24 -2 -15 -21 -27 -70 -45 -37 -14 -220 -85
-407 -157 -300 -116 -1168 -443 -1500 -565 -851 -312 -745 -265 -1385 -617
-316 -174 -353 -198 -661 -419 -310 -224 -331 -237 -460 -291 -74 -31 -363
-152 -644 -268 -775 -322 -725 -299 -738 -327 -16 -35 17 -97 53 -101 16 -2
311 116 770 308 l745 311 380 70 c209 38 396 71 415 74 36 5 700 198 892 260
134 43 223 79 363 145 61 29 225 105 365 170 140 65 300 139 355 165 144 68
774 356 950 435 732 327 763 340 794 334 41 -9 64 10 56 46 -6 27 -1 30 192
130 272 142 414 212 578 285 194 87 2247 951 2285 962 9 2 19 -6 25 -19 12
-28 47 -35 68 -14 9 9 27 16 41 16 14 0 31 8 38 18 7 9 24 17 38 17 16 0 29 8
36 23 11 23 64 62 83 62 8 0 442 -181 1106 -462 110 -47 236 -99 280 -117 l80
-33 655 221 c360 122 687 237 725 256 78 38 187 130 212 179 9 17 25 74 37
126 23 106 24 150 6 580 -5 140 -13 345 -17 455 l-6 200 44 16 c53 19 58 37
29 101 -24 55 -38 62 -85 42 -34 -14 -36 -14 -63 15 -15 16 -190 204 -389 418
-325 349 -371 395 -455 450 -51 34 -106 67 -121 72 -33 13 -139 13 -214 0z"
          />
        </g>
      </svg>
       
      <p
        class="score"
      >
        120
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots SettingsMenu Default 1`] = `
<div
  style="margin: 3em; padding: 2rem; border-radius: 1rem; background-color: rgb(48, 48, 48);"
>
  <div
    oninput="function actionHandler() {
    var channel = _addons.addons.getChannel();

    var id = (0, _v.default)();
    var minDepth = 5; // anything less is really just storybook internals

    for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
      args[_key] = arguments[_key];
    }

    var normalizedArgs = args.length > 1 ? args : args[0];
    var actionDisplayToEmit = {
      id: id,
      count: 0,
      data: {
        name: name,
        args: normalizedArgs
      },
      options: Object.assign({}, actionOptions, {
        depth: minDepth + (actionOptions.depth || 3),
        allowFunction: actionOptions.allowFunction || false
      })
    };
    channel.emit(_constants.EVENT_ID, actionDisplayToEmit);
  }"
  >
    <h2
      class="mb text-center"
    >
      Settings
    </h2>
     
    <div
      class="row"
    >
      <p>
        Game Mode
      </p>
       
      <div
        class="vs-select-content select"
      >
        <div
          class="vs-select vs-select--state-null"
        >
          <input
            class="vs-select__input simple"
            id="67"
            readonly="readonly"
          >
            <button
              class="vs-select__option isHover"
            >
              
        301
      
            </button>
            <button
              class="vs-select__option activeOption isHover"
            >
              
        501
      
            </button>
          </input>
          <label
            class="vs-select__label vs-select__label--hidden"
            for="67"
          />
          <label
            class="vs-select__label vs-select__label--hidden"
            for="67"
          />
          <!---->
          <i
            class="vs-icon-arrow"
          />
        </div>
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
     
    <div
      class="row"
    >
      <p>
        Double-In
      </p>
       
      <div
        class="vs-switch"
        type="checkbox"
      >
        <input
          class="vs-switch__input"
          type="checkbox"
        />
        <div
          class="vs-switch__circle"
        />
        <div
          class="vs-switch__text on"
        >
           On 
        </div>
        <div
          class="vs-switch__text off"
        >
           Off 
        </div>
        <div
          class="vs-switch__background"
        />
      </div>
    </div>
    <div
      class="row"
    >
      <p>
        Double-Out
      </p>
       
      <div
        class="vs-switch"
        type="checkbox"
      >
        <input
          class="vs-switch__input"
          type="checkbox"
        />
        <div
          class="vs-switch__circle"
        />
        <div
          class="vs-switch__text on"
        >
           On 
        </div>
        <div
          class="vs-switch__text off"
        >
           Off 
        </div>
        <div
          class="vs-switch__background"
        />
      </div>
    </div>
    <div
      class="row"
    >
      <p>
        Automatic Dart Score Recognition
      </p>
       
      <div
        class="vs-switch"
        type="checkbox"
      >
        <input
          class="vs-switch__input"
          type="checkbox"
        />
        <div
          class="vs-switch__circle"
        />
        <div
          class="vs-switch__text on"
        >
           On 
        </div>
        <div
          class="vs-switch__text off"
        >
           Off 
        </div>
        <div
          class="vs-switch__background"
        />
      </div>
    </div>
    <div
      class="row"
    >
      <p>
        Checkout Recommendations
      </p>
       
      <div
        class="vs-switch"
        type="checkbox"
      >
        <input
          class="vs-switch__input"
          type="checkbox"
        />
        <div
          class="vs-switch__circle"
        />
        <div
          class="vs-switch__text on"
        >
           On 
        </div>
        <div
          class="vs-switch__text off"
        >
           Off 
        </div>
        <div
          class="vs-switch__background"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots StyledButton Default 1`] = `
<button
  class="vs-button vs-button--null vs-button--size-null vs-button--default"
  label="Submit"
  onclick="function actionHandler() {
    var channel = _addons.addons.getChannel();

    var id = (0, _v.default)();
    var minDepth = 5; // anything less is really just storybook internals

    for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
      args[_key] = arguments[_key];
    }

    var normalizedArgs = args.length > 1 ? args : args[0];
    var actionDisplayToEmit = {
      id: id,
      count: 0,
      data: {
        name: name,
        args: normalizedArgs
      },
      options: Object.assign({}, actionOptions, {
        depth: minDepth + (actionOptions.depth || 3),
        allowFunction: actionOptions.allowFunction || false
      })
    };
    channel.emit(_constants.EVENT_ID, actionDisplayToEmit);
  }"
>
  <div
    class="vs-button__content"
  >
    <!---->
     
    <p
      class=""
    >
      Submit
    </p>
  </div>
</button>
`;

exports[`Storyshots StyledButton Icon 1`] = `
<button
  class="vs-button vs-button--null vs-button--size-null vs-button--default"
  label="Submit"
  onclick="function actionHandler() {
    var channel = _addons.addons.getChannel();

    var id = (0, _v.default)();
    var minDepth = 5; // anything less is really just storybook internals

    for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
      args[_key] = arguments[_key];
    }

    var normalizedArgs = args.length > 1 ? args : args[0];
    var actionDisplayToEmit = {
      id: id,
      count: 0,
      data: {
        name: name,
        args: normalizedArgs
      },
      options: Object.assign({}, actionOptions, {
        depth: minDepth + (actionOptions.depth || 3),
        allowFunction: actionOptions.allowFunction || false
      })
    };
    channel.emit(_constants.EVENT_ID, actionDisplayToEmit);
  }"
>
  <div
    class="vs-button__content"
  >
    <svg
      class="icon small"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.998 2.5A9.503 9.503 0 003.378 8H5.75a.75.75 0 010 1.5H2a1 1 0 01-1-1V4.75a.75.75 0 011.5 0v1.697A10.997 10.997 0 0111.998 1C18.074 1 23 5.925 23 12s-4.926 11-11.002 11C6.014 23 1.146 18.223 1 12.275a.75.75 0 011.5-.037 9.5 9.5 0 009.498 9.262c5.248 0 9.502-4.253 9.502-9.5s-4.254-9.5-9.502-9.5z"
        fill="white"
      />
      <path
        d="M12.5 7.25a.75.75 0 00-1.5 0v5.5c0 .27.144.518.378.651l3.5 2a.75.75 0 00.744-1.302L12.5 12.315V7.25z"
      />
    </svg>
     
    <p
      class="small"
    >
      Submit
    </p>
  </div>
</button>
`;

exports[`Storyshots StyledButton Loading 1`] = `
<button
  class="vs-button vs-button--null vs-button--size-null vs-button--loading vs-button--default"
  label="Submit"
  onclick="function actionHandler() {
    var channel = _addons.addons.getChannel();

    var id = (0, _v.default)();
    var minDepth = 5; // anything less is really just storybook internals

    for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
      args[_key] = arguments[_key];
    }

    var normalizedArgs = args.length > 1 ? args : args[0];
    var actionDisplayToEmit = {
      id: id,
      count: 0,
      data: {
        name: name,
        args: normalizedArgs
      },
      options: Object.assign({}, actionOptions, {
        depth: minDepth + (actionOptions.depth || 3),
        allowFunction: actionOptions.allowFunction || false
      })
    };
    channel.emit(_constants.EVENT_ID, actionDisplayToEmit);
  }"
>
  <div
    class="vs-button__content"
  >
    <!---->
     
    <p
      class=""
    >
      Submit
    </p>
  </div>
  <div
    class="vs-button__loading"
  />
</button>
`;

exports[`Storyshots StyledButton Primary 1`] = `
<button
  class="vs-button vs-button--null vs-button--size-null vs-button--default"
  label="Submit"
  onclick="function actionHandler() {
    var channel = _addons.addons.getChannel();

    var id = (0, _v.default)();
    var minDepth = 5; // anything less is really just storybook internals

    for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
      args[_key] = arguments[_key];
    }

    var normalizedArgs = args.length > 1 ? args : args[0];
    var actionDisplayToEmit = {
      id: id,
      count: 0,
      data: {
        name: name,
        args: normalizedArgs
      },
      options: Object.assign({}, actionOptions, {
        depth: minDepth + (actionOptions.depth || 3),
        allowFunction: actionOptions.allowFunction || false
      })
    };
    channel.emit(_constants.EVENT_ID, actionDisplayToEmit);
  }"
>
  <div
    class="vs-button__content"
  >
    <!---->
     
    <p
      class=""
    >
      Submit
    </p>
  </div>
</button>
`;
